--- a/src/index.html
+++ b/src/index.html
@@ -13,22 +13,22 @@
       <h1>Weather App</h1>
       <form id="form">
         <input
-          id="cityInput"
           value=""
           name="cityName"
           placeholder="Enter location"
         />
-        <button type="submit">Find</button>
+        <button>Find</button>
       </form>
       <div class="showCurrentWeather">
-        <div id="icon"></div>
-        <div id="location"></div>
-        <div id="temperature"></div>
-        <div id="windDirection"></div>
-        <div id="precipitation"></div>
+          <div id="icon"></div>
+          <div id="location"></div>
+          <div id="temperature"></div>
+          <div id="windDirection"></div>
+          <div id="precipitation"></div>
+
       </div>
 
-      <div class="showforecast" id="forecast">
-    </div>
+      <div class="showforecast" id="forecast"></div>
+
   </body>
 </html>
